# amadeus

./: Cargo.toml  run.yml
examples/: package_yml.rs
src/: cli.rs  lib.rs  main.rs  manager.rs  package.rs  package_index.rs
