[package]
name = "run-that"
version = "0.1.0"
edition = "2021"
authors = ["ur-fault"]
description = "Simple launcher for git repositories"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2.0.0"
git2 = "0.16"
lazy-regex = "2.4.1"
once_cell = "1.17.0"
path-absolutize = "3.0.14"
serde = {version = "1.0.152", features = ["derive"]}
serde_yaml = "0.9.17"
tap = "1.0.1"
thiserror = "1.0.38"
# tokio = "1.25.0"
